# qct-convert

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: workflow.yaml
qct/: CMakeLists.txt
qct-export/: CMakeLists.txt
qct-export/src/: bmp.ixx  exception.ixx  exporter.ixx  geotiff.ixx  kml.ixx  png.ixx  qctexport.ixx
qct/src/: qct.ixx  qct_file.ixx
qct/src/common/: alias.ixx  crtp.ixx  exception.ixx
qct/src/geo/: coef.ixx  poly.ixx
qct/src/georef/: coefficients.ixx  coordinates.ixx  georef.ixx
qct/src/image/: decode.ixx  huffman.ixx  image.ixx  index.ixx  pp.ixx  rle.ixx  tile.ixx
qct/src/image/decode/: decode.ixx  decoder.ixx  huffman.ixx  palette.ixx  pp.ixx  rle.ixx
qct/src/meta/: datum_shift.ixx  extended_data.ixx  file_format_version.ixx  magic_number.ixx  map_outline.ixx  metadata.ixx
qct/src/palette/: color.ixx  palette.ixx  sub_palette.ixx
qct/src/util/: buffer.ixx  kml.ixx  reader.ixx
qct/test/: CMakeLists.txt
qct/test/geo/: poly_test.cpp
qct/test/georef/: georef_test.cpp
